package io.github.sophon.core.domain.model

sealed class PropertyUpgrade {
    abstract val value: Double

    data class TechPower(override val value: Double) : PropertyUpgrade()
    data class TechResist(override val value: Double) : PropertyUpgrade()
    data class BulletResist(override val value: Double) : PropertyUpgrade()
    data class BonusFireRate(override val value: Double) : PropertyUpgrade()
    data class BonusMoveSpeed(override val value: Double) : PropertyUpgrade()
    data class BonusSprintSpeed(override val value: Double) : PropertyUpgrade()
    data class BonusHealth(override val value: Double) : PropertyUpgrade()
    data class BonusHealthRegen(override val value: Double) : PropertyUpgrade()
    data class OutOfCombatHealthRegen(override val value: Double) : PropertyUpgrade()
    data class Stamina(override val value: Double) : PropertyUpgrade()
    data class StaminaCooldownReduction(override val value: Double) : PropertyUpgrade()
    data class CooldownReduction(override val value: Double) : PropertyUpgrade()
    data class BonusClipSizePercent(override val value: Double) : PropertyUpgrade()
    data class BonusClipSize(override val value: Double) : PropertyUpgrade()
    data class BonusBulletSpeedPercent(override val value: Double) : PropertyUpgrade()
    data class BulletLifestealPercent(override val value: Double) : PropertyUpgrade()
    data class AbilityLifestealPercentHero(override val value: Double) : PropertyUpgrade()
    data class SlowPercent(override val value: Double) : PropertyUpgrade()
    data class SlowDuration(override val value: Double) : PropertyUpgrade()
    data class StatusResistancePercent(override val value: Double) : PropertyUpgrade()
    data class ProcChance(override val value: Double) : PropertyUpgrade()
    data class TechRangeMultiplier(override val value: Double) : PropertyUpgrade()
    data class TechRadiusMultiplier(override val value: Double) : PropertyUpgrade()
    data class BonusAbilityDurationPercent(override val value: Double) : PropertyUpgrade()
    data class AbilityCooldown(override val value: Double) : PropertyUpgrade()
    data class BulletArmorReduction(override val value: Double) : PropertyUpgrade()
    data class MagicResistReduction(override val value: Double) : PropertyUpgrade()
    data class HealAmpReceivePenaltyPercent(override val value: Double) : PropertyUpgrade()
    data class HealAmpRegenPenaltyPercent(override val value: Double) : PropertyUpgrade()
    data class BaseAttackDamagePercent(override val value: Double) : PropertyUpgrade()
    data class BonusAbilityCharges(override val value: Double) : PropertyUpgrade()
    data class MoveSpeedBonus(override val value: Double) : PropertyUpgrade()
    data class FireRateSlow(override val value: Double) : PropertyUpgrade()
    data class Damage(override val value: Double) : PropertyUpgrade()
}
